# cli

./: .editorconfig  .gitignore  CHANGELOG.md  Development.md  LICENSE  README.md  api.py  config.py  dc_analysis.py  main.py  mockedjson.json  pyproject.toml  requirements.txt  setup.py  test.sh  test_package.txt  util.py
.circleci/: config.yml
deepcode/: __init__.py  analysis.py  auth.py  bundle.py  cli.py  command_line.py  connection.py  constants.py  files.py  formatter.py  git_utils.py  severity.py  utils.py
deepcode/cli/: example_config.json  main.py  test_main.py
deepcode/cli/tests/: test_util.py
deepcode/src/: cli.py  dc_analysis.py  main.py  module.py  test_python2_python3_compat.sh  util.py
deepcode/src/constants/: backend_constants.py  cli_constants.py  common_ignore_dirs.py  config.py  config_constants.py
deepcode/src/helpers/: cli_helpers.py  cli_parser_helpers.py  errors_messages.py  terminal_view_decorations.py
deepcode/src/modules/: DeepCodeArgsParser.py  analyzer.py  args_parser.py  bundler.py  config.py  deepcode_lib.py  deepcode_main.py  errors_handler.py  http.py  user.py
deepcode/src/tests/: test_dc_analysis.py
deepcode/src/utils/: analysis_utils.py  api_utils.py  cli_utils.py  config_utils.py
deepcode/tests/: test_analysis.py  test_creating_hashes.py  test_dc_analysis.py  test_http.py  test_util.py  test_utils.py
deepcode/tests/mocked_for_tests/sample_repository/: main.js
deepcode_old/src/helpers/: errors_messages.py
deepcode_old/src/modules/: analyzer.py  bundler.py  config.py
deepcode_old/src/utils/: analysis_utils.py  config_utils.py
deepcode_old/tests/: test_creating_hashes.py
docs/: Development.md
tests/: .dcignore  test_bundles.py  test_dc_analysis.py  test_deepcode.py  test_files.py
tests/sample-repo/: .dcignore  .eslintrc.json  AnnotatorTest.cpp  Dockerfile  GitHubAccessTokenScrambler12.java  app.js  db.js
tests/tests_old/: test_analysis.py
